--- a/visual-planner/views/layout.jade
+++ b/visual-planner/views/layout.jade
@@ -3,5 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jque ry.min.js')
   body
+    header
+      nav
+        ul
+          li 
+            a(href="/") Home
+          li 
+            a(href="/contact") Contact
     block content
